--- a/assets/themes.css
+++ b/assets/themes.css
@@ -10,7 +10,7 @@ header{
   background-color: #05080d;
   font-size: 3em;
   color: white;
-}
+  }
 
 img{
   border-radius: 40px;
@@ -27,15 +27,19 @@ a{
   text-decoration: none;
 }
 
+footer{
+  font-size: 1em;
+}
+
 .btn {
   -webkit-border-radius: 9;
   -moz-border-radius: 9;
-  border-radius: 9px;
+  border-radius: 0.45em;
   font-family: "Ubuntu";
   color: #ffffff;
-  font-size: 20px;
+  font-size: 1em;
   background: #3d272a;
-  padding: 10px 20px 10px 20px;
+  padding: .5em 1em .5em 1em;
   text-decoration: none;
 }
 
