forgot about alternative fonts---whoops!

--- a/assets/themes.css
+++ b/assets/themes.css
@@ -1,6 +1,6 @@
 body{
   background-color: #22353c;
-  font-family:"Ubuntu";
+  font-family:"Ubuntu", "Droid Sans", Helvetica, Arial;
   font-size: 20px;
   height: 100%;
 
