--- a/assets/themes.css
+++ b/assets/themes.css
@@ -74,3 +74,10 @@ footer{
     padding-left: 1%;
     margin: 0;
   }
+
+  .next {
+    text-align: center;
+    clear: both;
+    padding-top: 5%;
+
+  }
