--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ nav li{
   }
 
   #slider{
-  width: 95%;
+  width: 90%;
   height: 350px;
   position: relative;
 	overflow: hidden;
@@ -183,4 +183,72 @@ nav li{
   background: #000;
   color: #fff;
   text-decoration: none;
+}
+
+
+@media screen and (max-width: 768px) {
+  .main {
+    width: 70%;
+    height: 25%;
+    margin: 15% auto 0;
+    text-align: center;
+    margin-top: 10%;
+    font-size: 2em;
+    border-style: solid;
+    border-width: 10px;
+    border-radius: 20px;
+    padding: 30px;
+  }
+
+  .main {
+    margin: 10% auto 0;
+  }
+
+  #about{
+    width: 70%;
+  }
+
+  #about img{
+    margin: 5% auto;
+    height: 100%;
+    width: 100%;
+  }
+
+  #projects{
+    width: 75%;
+  }
+
+  #slider{
+  width: 85%;
+  height: 500px;
+  position: relative;
+}
+
+.slide{
+	postion: relative;
+}
+
+.slide-copy{
+  font-size: .65em;
+	position: relative;
+	bottom: 0;
+	left: 0;
+	padding: 10px;
+	background: black;
+	background: rgba(0,0,0,0.75);
+}
+
+#contacts{
+  width: 75%;
+}
+
+#contacts li{
+  display:block;
+  margin-bottom: 20px;
+}
+.btn {
+ font-size: 1em;
+
+ }
+
 }
