--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,24 @@ main {
 
 h1 { 
     font-size: 300%;
+    font-family: 'Libre Barcode 39 Text', cursive;
+}
+
+h3 {
+    font-size: 200%;
+}
+
+.fade-in-text-1 {
+    animation: fadeIn 10s;
+}
+
+.fade-in-text-2 {
+    animation: fadeIn 15s;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0;}
+    100% { opacity: 1;}
 }
 
 /* Navbar */
@@ -22,10 +40,22 @@ nav {
     grid-row: 1;
     grid-column: 2;
     text-align: right;
+    padding-top: 2.5%;
+}
+
+ul {
+    height: 0.5em
 }
 
 li {
     display: inline;
+    text-align: center;
+    padding: 1%;
+}
+
+li:hover {
+    text-decoration: underline red 0.25em;
+    
 }
 
 
